Adição de paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur suscipit pariatur expedita ipsum voluptates cupiditate non harum neque temporibus atque, dicta ipsa doloribus aliquam, iste voluptas, a distinctio. Sapiente, quibusdam.</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum laborum animi nesciunt repellat sint, ipsam et natus soluta modi libero amet cumque officia qui dolorem sequi veniam est assumenda velit?</p>
 </body>
 </html>
